--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "@liveblocks/client": "^2.15.2",
     "@liveblocks/react": "^2.15.2",
+    "@liveblocks/react-comments": "^1.12.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "fabric": "^6.5.4",
+    "lucide-react": "^0.471.0",
     "next": "15.1.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
